# Farmer_Assisstant_APP

./: app.py  pyproject.toml  replit.nix
attached_assets/: Pasted-That-s-an-excellent-and-impactful-topic-Building-an-AI-based-solution-for-smallholder-farmers-can-t-1738413467124.txt
data/: sample_data.csv
utils/: auth.py  crop_manager.py  data_manager.py  disease_detection.py  image_processing.py  visualization.py
